# ArticleGPT

./: .gitignore  README.md  ROADMAP.md  RoadMap.md  main.py  pyproject.toml
article_creater/: myprompts.py  prompt_creater.py  summarize.py
article_creater/my_prompts/: summarize_2ch.html
crowler/: get_article_info.py  get_threads.py  get_threads_info.py
interpreter/: convert.py  prompt.py  prompt_creater.py  summarize.py  test_convert.py  test_prompt.py  test_prompt_creater.py  test_summarize.py
interpreter/my_prompts/: 2ch_generation.md  2ch_system.json  2ch_system.md  2ch_system.txt  conversation.json  conversation.txt  custom_instructions.txt
render/: external_processor.py  render_templates.py  test_render_templates.py
render/output/2ch/: 2ch_sample.html.tpl  Summary_of_2chの面白さ.html  Summary_of_2chの面白さ.html.tpl  Summary_of_AirPodsPro.html  Summary_of_AirPodsPro.html.tpl  Summary_of_iphone 新型 大きい.html  Summary_of_iphone 新型 大きい.html.tpl  Summary_of_ブレードランナー.html  Summary_of_ブレードランナー.html.tpl  Summary_of_人事面談.html  Summary_of_人事面談.html.tpl  Summary_of_綾鷹.html  Summary_of_綾鷹.html.tpl  Summary_of_電子レンジおすすめ.html  Summary_of_電子レンジおすすめ.html.tpl
render/output/qiita/: Summary_of_apple VRヘッドセット.html  Summary_of_apple VRヘッドセット.html.tpl  Summary_of_chatGPT bard 比較.html  Summary_of_chatGPT bard 比較.html.tpl  (+2 more)
render/templates/: 2ch_base.html.tpl  qiita_base.html.tpl
tools/: clean_output_files.sh  get_env.sh
upload/: uploader.py
uploader/: upload_file.py
utils_temp/: agent_sample.py
web_crowling/: get_article_info.py  summerlize_articles.py
(+3 files in other folders)
