[tool.poetry]
name = "articlegpt"
version = "0.1.0"
description = ""
authors = ["ryku"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.41.0"
openai = "^0.27.0"
beautifulsoup4 = "^4.12.2"
langchain = "^0.0.147"
jinja2 = "^3.1.2"
pytest = "^7.3.1"
guidance = "^0.0.44"
python-amazon-paapi = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
